selectors in js

--- a/06_DOM/One.html
+++ b/06_DOM/One.html
@@ -6,6 +6,12 @@
     <title>DOM</title>
 </head>
 <body>
+    <script>
+        const heading = document.querySelector('h1')
+        heading.style.background ='red'
+
+
+    </script>
     <div class="bg-black">
         <h1 class="heading">Document Object Model</h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolor itaque suscipit sit sint similique alias maxime hic aperiam quae facilis quisquam corporis harum officia id esse adipisci eius, veritatis explicabo sequi qui optio! Dolore.</p>
@@ -19,4 +25,10 @@
  in html file it have further head and body 
  both head and body have it further node 
  Head have <title> with text node "DOM" </title> and meta have its Attribute
- after further in <Body></Body> have its further child node below which are div with attribute bg-blak and further child node <h1></h1> with text node and attribute which is its class name <p></p> with text node -->
+ after further in <Body></Body> have its further child node below which are div with attribute bg-blak and further child node <h1></h1> with text node and attribute which is its class name <p></p> with text node --> 
+
+<!-- Types of Selector most used selctors
+        document.getElementById
+        document.getElementsByClassName
+        document.querySelector
+        document.querySelectorAll -->
